--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "painless-pdf",
   "version": "1.0.0",
-  "description": "Painless PDF genration library",
+  "description": "Painless PDF generation for node and the browser",
+  "repository": "https://github.com/DevLeoko/painless-pdf",
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --files --respawn --inspect -- src/index.ts"
   },
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
     "jspdf": "^2.5.1"
   },
   "devDependencies": {
+    "express": "^4.18.2",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.3",
     "ts-node-dev": "^2.0.0",
