--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "Painless PDF generation for node and the browser",
   "repository": "https://github.com/DevLeoko/painless-pdf",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "dev": "ts-node-dev --files --respawn --inspect -- src/index.ts"
+    "dev": "ts-node-dev --files --respawn --inspect -- src/lib/debugging/index.ts"
   },
   "license": "MIT",
   "dependencies": {
