--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "painless-pdf",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Painless PDF generation for node and the browser",
   "repository": "https://github.com/DevLeoko/painless-pdf",
-  "main": "src/index.ts",
+  "main": "build/main/index.js",
+  "typings": "build/main/index.d.ts",
+  "module": "build/module/index.js",
   "scripts": {
+    "build": "run-p build:*",
+    "build:main": "tsc -p tsconfig.json",
+    "build:module": "tsc -p tsconfig.module.json",
     "dev": "ts-node-dev --files --respawn --inspect -- src/lib/debugging/index.ts"
   },
   "license": "MIT",
@@ -12,9 +17,10 @@
     "jspdf": "^2.5.1"
   },
   "devDependencies": {
-    "express": "^4.18.2",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.3",
+    "express": "^4.18.2",
+    "npm-run-all": "^4.1.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.2"
   }
