--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "painless-pdf",
-  "version": "1.2.2",
+  "version": "1.3.1",
   "description": "Painless PDF generation for node and the browser",
   "repository": "https://github.com/DevLeoko/painless-pdf",
   "main": "build/main/index.js",
@@ -26,11 +26,14 @@
   },
   "license": "MIT",
   "dependencies": {
-    "jspdf": "^2.5.1"
+    "jsdom": "^22.1.0",
+    "jspdf": "^2.5.1",
+    "svg2pdf.js": "^2.2.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.3",
+    "@types/jsdom": "^21.1.1",
     "express": "^4.18.2",
     "npm-run-all": "^4.1.5",
     "ts-node-dev": "^2.0.0",
