--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@leoko/svg2pdf.js": "^2.2.3",
     "jsdom": "^22.1.0",
     "jspdf": "^2.5.1",
     "svg2pdf.js": "^2.2.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/node": "^18.15.3",
     "@types/jsdom": "^21.1.1",
+    "@types/node": "^18.15.3",
     "express": "^4.18.2",
     "npm-run-all": "^4.1.5",
     "ts-node-dev": "^2.0.0",
