--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "painless-pdf",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "Painless PDF generation for node and the browser",
   "repository": "https://github.com/DevLeoko/painless-pdf",
   "main": "build/main/index.js",
@@ -27,6 +27,7 @@
   "license": "MIT",
   "dependencies": {
     "@leoko/svg2pdf.js": "^2.2.3",
+    "image-size": "^1.0.2",
     "jsdom": "^22.1.0",
     "jspdf": "^2.5.1",
     "svg2pdf.js": "^2.2.2"
