--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build-watch": "run-p build-watch:*",
     "build-watch:main": "tsc -p tsconfig.json --watch",
     "build-watch:module": "tsc -p tsconfig.module.json --watch",
-    "dev": "ts-node-dev --files --respawn --inspect -- src/lib/debugging/index.ts"
+    "dev": "nodemon src/lib/debugging/index.ts \"ts-node --files\""
   },
   "license": "MIT",
   "dependencies": {
@@ -35,10 +35,13 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jsdom": "^21.1.1",
+    "@types/livereload": "^0.9.5",
     "@types/node": "^18.15.3",
     "express": "^4.18.2",
+    "livereload": "^0.9.3",
+    "nodemon": "^3.1.0",
     "npm-run-all": "^4.1.5",
-    "ts-node-dev": "^2.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.0.2"
   }
 }
